# ava

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
ava/: inference.py  main.py  tools.py
ava/static/: script.js  styles.css
ava/templates/: index.html
